FIX: Updated styles for collections section mobile screen

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -360,14 +360,21 @@ span.boo {
 .product-container {
   background: var(--color-light-grey);
   border-radius: 12px;
-  padding-top: 20px;
-  padding-bottom: 20px;
+  padding-top: 10px;
+  height: 500px;
+  width: 100%;
+}
+
+.product-image-container {
+  height: 350px;
+  margin-bottom: 20px;
 }
 
 .product-text-container {
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 0 10px;
 }
 
 .product-title {
@@ -428,4 +435,191 @@ span.boo {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+
+#collections-slider-section {
+  margin-bottom: 30px;
+}
+
+@media screen and (max-width: 400px) {
+  .collection-title,
+  .collection-amount {
+    font-size: 24px;
+    line-height: 36px;
+  }
+  .collection-text-container {
+    max-width: 380px;
+  }
+}
+
+@media screen and (min-width: 401px) and (max-width: 760px) {
+  .collection-title,
+  .collection-amount {
+    font-size: 32px;
+    line-height: 48px;
+  }
+}
+
+/* Top sellers section */
+.top-seller-text-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.top-seller-title {
+  font-family: Montserrat, sans-serif;
+  font-size: 40px;
+  font-weight: 500;
+  line-height: 60px;
+  color: rgba(35, 31, 32, 1);
+  margin-bottom: 15px;
+}
+
+.top-seller-text {
+  font-family: Karla, sans-serif;
+  font-size: 15px;
+  font-weight: 400;
+  line-height: 24px;
+  text-align: center;
+  color: rgba(128, 128, 128, 1);
+  max-width: 508px;
+  margin-bottom: 35px;
+}
+
+.top-seller-card {
+  width: 695px;
+  background-color: rgba(66, 171, 222, 0.08);
+  border-radius: 12px;
+}
+
+.top-seller-title-container {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+  align-items: center;
+  margin: 15px 0;
+}
+
+.top-seller-product-title {
+  color: rgba(66, 171, 222, 1);
+  font-family: Montserrat, sans-serif;
+  font-size: 32px;
+  font-weight: 600;
+  line-height: 48px;
+}
+
+.top-seller-image {
+  max-height: 800px;
+}
+
+.arrow-container {
+  width: 50px;
+}
+
+.top-seller-content {
+  padding-left: 30px;
+  padding-right: 30px;
+}
+
+.top-seller-product-text,
+.top-seller-product-text span {
+  font-family: Karla, sans-serif;
+  font-size: 15px;
+  font-weight: 400;
+  line-height: 24px;
+  text-align: left;
+  color: inherit;
+}
+
+.card-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 1rem;
+  max-width: 1400px;
+}
+
+.top-seller-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#top-seller-swiper {
+  display: none;
+}
+
+.top-seller-arrow-left,
+.top-seller-arrow-right {
+  cursor: pointer;
+  width: 50px;
+  height: 50px;
+}
+
+.top-seller-arrow-container {
+  display: block;
+  margin: auto;
+  width: 50%;
+}
+
+@media screen and (max-width: 428px) {
+  .top-seller-product-title {
+    font-size: 18px;
+    line-height: 27px;
+  }
+
+  .top-seller-title-container {
+    padding-top: 20px;
+  }
+
+  .top-seller-content {
+    padding: 0 10px;
+  }
+
+  .top-seller-title {
+    font-size: 24px;
+    font-weight: 500;
+    line-height: 36px;
+    text-align: center;
+  }
+
+  .top-seller-text {
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 24px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .top-seller-card {
+    max-width: 280px;
+    height: 650px;
+  }
+
+  .swiper-container-top-seller {
+    max-height: 385px;
+    width: 96%;
+  }
+  #top-seller-swiper {
+    display: block;
+  }
+
+  .card-container {
+    display: none;
+  }
+
+  .top-seller-title {
+    font-size: 32px;
+    line-height: 48px;
+    text-align: center;
+  }
+
+  .top-seller-text {
+    max-width: 508px;
+  }
+
+  .top-seller-slide {
+    margin: auto;
+  }
 }
